apps/tencentcloud/tekton/setup/http-route.yaml
# Ref: https://cloud.google.com/kubernetes-engine/docs/how-to/deploying-gateways
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tekton
  namespace: tekton-pipelines
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: infra
  hostnames:
    - do.pingcap.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /tekton
      backendRefs:
        - name: tekton-dashboard
          port: 9097
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
